--- a/Lesson-2/tasks/task5.html
+++ b/Lesson-2/tasks/task5.html
@@ -27,7 +27,7 @@
     //3. Виводимо результат
     document.write(`
     Це ${numberHours} год., або ${numberMinutes} хв. <br>
-    Або ${wholeHours} год. та ${wholeMinutes}
+    Або ${wholeHours} год. та ${wholeMinutes} хв.
     `)
   </script>
   
