--- a/Lesson-2/tasks/task4.html
+++ b/Lesson-2/tasks/task4.html
@@ -19,8 +19,8 @@
     let length = parseInt(prompt('Введіть довжину у сантиметрах'))
 
     //2. Знаходимо результат
-    let lengthMeter = length/1000
-    let lengthKilometer = length/1000000
+    let lengthMeter = length/100
+    let lengthKilometer = length/100000
     
     //3. Виводимо результат
     document.write(`
