--- a/Lesson-3/tasks/task3.html
+++ b/Lesson-3/tasks/task3.html
@@ -25,7 +25,7 @@
     if (guessNumber != randomNumber) {
       guessNumber = parseInt(prompt('Нажаль ні, але є ще одна спроба!'))
         if (guessNumber != randomNumber)
-          alert('Ні, не вгадали(')
+          alert('Ні, не вгадали( це було ${randomNumber}')
         else
           alert('Так! ви вгадали!')
     }
