--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JS (Summer 2023)</title>
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>JS (Summer 2023)</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <h1>Виконанані домашні завдання, Ігор Кофанов</h1>
 
-  <h1>Виконанані домашні завдання, Ігор Кофанов</h1>
-  
-  <ol>
-    <li>
-      <a href="Lesson-2/index.html">ДЗ №2</a>
-    </li>
-    
-    <li>
-      <a href="Lesson-3/index.html">ДЗ №3</a>
-    </li>
-  </ol>
+      <ol>
+        <li>
+          <a href="Lesson-2/index.html">ДЗ №2</a>
+        </li>
 
-</body>
+        <li>
+          <a href="Lesson-3/index.html">ДЗ №3</a>
+        </li>
+
+        <li>
+          <a href="Lesson-5/index.html">ДЗ №5</a>
+        </li>
+      </ol>
+    </div>
+  </body>
 </html>
