--- a/Lesson-5/index.html
+++ b/Lesson-5/index.html
@@ -24,21 +24,18 @@
 
         <li>
           <h3>
+            <a href="tasks/task3.html">Задача 3</a>
+          </h3>
+          <p>Вивести таблицю з одним рядком і 7 стовпцями з цифрами 1-7.</p>
+        </li>
+
+        <li>
+          <h3>
             <a href="tasks/task6.html">Задача 6</a>
           </h3>
           <p>
             Вивести 3 таблиці (по 3 рядки і 3 стовпці у кожній, з цифрами 1-9,
             10-18 та 19-27)
-          </p>
-        </li>
-
-        <li>
-          <h3>
-            <a href="tasks/task8.html">Задача 8</a>
-          </h3>
-          <p>
-            Користувач загадує число. За 3 спроби комп’ютер намагається вгадати
-            число користувача (використати confirm).
           </p>
         </li>
 
