--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <li>
           <a href="Lesson-5/index.html">ДЗ №5</a>
         </li>
+
+        <li>
+          <a href="Lesson-6/index.html">ДЗ №6</a>
+        </li>
       </ol>
     </div>
   </body>
