--- a/Lesson-6/tasks/task2.html
+++ b/Lesson-6/tasks/task2.html
@@ -20,7 +20,8 @@
 
         //2. Знаходимо результат
         for (let i = 0; i < numO; i++) {
-          sumO *= document.write(`${sumO}<br>`)
+          sumO += "o"
+          document.write(`${sumO}<br>`)
         }
 
         //3. Виводимо результат
