--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <li>
           <a href="Lesson-6/index.html">ДЗ №6</a>
         </li>
+
+        <li>
+          <a href="Lesson-7/index.html">ДЗ №7</a>
+        </li>
       </ol>
     </div>
   </body>
