--- a/Lesson-7/tasks/task5.html
+++ b/Lesson-7/tasks/task5.html
@@ -20,11 +20,8 @@
 
       <script>
         //1. Вводимо необхідні дані
-        const makeYourChoice = parseInt(
-          prompt(
-            "Натисніть для переведення: Сантиметрів у дюйми - 1, Кілограмів у фунти - 2, Кілометрів у милі - 3"
-          )
-        )
+        const makeYourChoice = parseInt(prompt("Натисніть для переведення: Сантиметрів у дюйми - 1, Кілограмів у фунти - 2, Кілометрів у милі - 3"))
+        
         //2. Знаходимо результат
         function cmToInches(cm) {
           const inch = cm * 0.393700787
@@ -42,44 +39,19 @@
         }
 
         // 3. Виводимо результат
-        // if (makeYourChoice === 1) {
-        //   let enterCm = parseInt(
-        //     prompt("Введіть кількість сантиметрів для переведення в дюйми")
-        //   )
-        //   document.write(`${enterCm} см = ${cmToInches(enterCm)} дюймів`)
-        // } else if (makeYourChoice === 2) {
-        //   let enterKg = parseInt(
-        //     prompt("Введіть кількість кілограмів для переведення в фунти")
-        //   )
-        //   document.write(`${enterKg} кг = ${kgToPounds(enterKg)} фунтів`)
-        // } else if (makeYourChoice === 3) {
-        //   let enterKm = parseInt(
-        //     prompt("Введіть кількість кілометрів для переведення в милі")
-        //   )
-        //   document.write(`${enterKm} км = ${kmToMiles(enterKm)} миль`)
-        // } else {
-        //   alert("Ви ввели невірне число, спробуйте ще")
-        // }
-
         switch (makeYourChoice) {
           case 1:
-            let enterCm = parseInt(
-              prompt("Введіть кількість сантиметрів для переведення в дюйми")
-            )
+            let enterCm = parseInt(prompt("Введіть кількість сантиметрів для переведення в дюйми"))
             document.write(`${enterCm} см = ${cmToInches(enterCm)} дюймів`)
             break
 
           case 2:
-            let enterKg = parseInt(
-              prompt("Введіть кількість кілограмів для переведення в фунти")
-            )
+            let enterKg = parseInt(prompt("Введіть кількість кілограмів для переведення в фунти"))
             document.write(`${enterKg} кг = ${kgToPounds(enterKg)} фунтів`)
             break
 
           case 3:
-            let enterKm = parseInt(
-              prompt("Введіть кількість кілометрів для переведення в милі")
-            )
+            let enterKm = parseInt(prompt("Введіть кількість кілометрів для переведення в милі"))
             document.write(`${enterKm} км = ${kmToMiles(enterKm)} миль`)
             break
 
