--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
         <li>
           <a href="Lesson-7/index.html">ДЗ №7</a>
         </li>
+
+        <li>
+          <a href="Lesson-8/index.html">ДЗ №8</a>
+        </li>
       </ol>
     </div>
   </body>
