--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         <li>
           <a href="Lesson-8/index.html">ДЗ №8</a>
         </li>
+
+        <li>
+          <a href="Lesson-9/index9.html">ДЗ №9</a>
+        </li>
       </ol>
     </div>
   </body>
