--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         <li>
           <a href="Lesson-9/index9.html">ДЗ №9</a>
         </li>
+        
+        <li>
+          <a href="Lesson-10/index10.html">ДЗ №10</a>
+        </li>
       </ol>
     </div>
   </body>
