--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         <li>
           <a href="Lesson-10/index10.html">ДЗ №10</a>
         </li>
+
+        <li>
+          <a href="Lesson-11/index11.html">ДЗ №11</a>
+        </li>
       </ol>
     </div>
   </body>
