--- a/Lesson-11/tasks/task1.html
+++ b/Lesson-11/tasks/task1.html
@@ -11,13 +11,13 @@
     <div class="wrapper">
       <h1>Задача 1</h1>
 
-      <p>
+      <!-- <p>
         1-4) Знайти суми елементів у кожній чверті масива (масиви розділені на 4
         рівні частини)
       </p>
       <p>5) Суму парних рядків</p>
       <p>6) Суму непарних стовпців</p>
-      <p>7) У парних рядках – непарні стовпці, у непарних – парні.</p>
+      <p>7) У парних рядках – непарні стовпці, у непарних – парні.</p> -->
 
       <script>
         "use strict"
